XMLtoCSV/objects/unpackaged/objects/PCYC_Specialty_Master__c.object
<CustomObject>
    <fields>
        <fullName>PCYC_Approved_NAE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved for NAE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_Approved_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Specialty Approved For Sales</description>
        <label>Approved For Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCYC_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>160</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCYC_Specialty__c</fullName>
        <label>Specialty</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <label>Specialty Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Specialty__c</columns>
        <columns>PCYC_Approved_NAE__c</columns>
        <columns>PCYC_Approved_Sales__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Master_Specialty</fullName>
        <columns>NAME</columns>
        <columns>PCYC_Specialty__c</columns>
        <columns>PCYC_Approved_NAE__c</columns>
        <filterScope>Everything</filterScope>
        <label>Master Specialty</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PSN-{0}</displayFormat>
        <label>Specialty#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Specialty Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>